feat(tela de projetos): adicionar sugestao de melhoria da ferramenta
contexto:
Foi implementada uma funcionalidade que permite aos usuarios enviar sugestoes de melhoria para a ferramenta diretamente pela interface.

causa:
A necessidade de coletar feedback dos usuarios para aprimorar a experiencia da ferramenta e identificar areas que precisam de melhorias.

solucao:
Foi criado um novo modal que permite ao usuario descrever sua sugestao. A sugestao é enviada para a API e um feedback visual é fornecido ao usuario sobre o status do envio.

impacto:
Essa funcionalidade melhora a interacao do usuario com a ferramenta e possibilita um canal direto para feedback, o que pode levar a melhorias significativas na experiencia do usuario.
